--- a/settings/config_sample.yml
+++ b/settings/config_sample.yml
@@ -11,7 +11,7 @@ mqtt:
     passwd: karman
     topic_prefix: /aircon
     auto_discovery_topic: homeassistant
-    retain: False
+    auto_discovery_topic_retain: False
     discovery: False
 
 ##Devices
